// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypeSizes should match atlas for arabic 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for bengali 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for burmese 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for chinese 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for cyrillic 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for cyrillicAndLatin 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for devanagariAndGurmukhi 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for ethiopic 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for hindi 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for korean 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for latin 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for latinDiacritics 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for nepali 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for noAscendersOrDescenders 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for sinhalese 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for tamil 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match atlas for thai 1`] = `
"
    font-size: 4.875rem;
    line-height: 5.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 8.75rem;
      line-height: 9.25rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for bengali 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.0625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 2.125rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for chinese 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for cyrillicAndLatin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for devanagariAndGurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for ethiopic 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for hindi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for korean 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for latinDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for nepali 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for noAscendersOrDescenders 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match bodyCopy for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for arabic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for bengali 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for burmese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for chinese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for cyrillic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for cyrillicAndLatin 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for devanagariAndGurmukhi 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for ethiopic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for hindi 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for korean 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for latin 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for latinDiacritics 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for nepali 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for noAscendersOrDescenders 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for sinhalese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for tamil 1`] = `
"
    font-size: 0.625rem;
    line-height: 0.9375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.625rem;
      line-height: 0.9375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.6875rem;
      line-height: 0.9375rem;
    }
  "
`;

exports[`getTypeSizes should match brevier for thai 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match canon for arabic 1`] = `
"
    font-size: 1.5rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.375rem;
    }
  "
`;

exports[`getTypeSizes should match canon for bengali 1`] = `
"
    font-size: 1.6875rem;
    line-height: 2.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.5rem;
    }
  "
`;

exports[`getTypeSizes should match canon for burmese 1`] = `
"
    font-size: 1.5rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.875rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 4.5rem;
    }
  "
`;

exports[`getTypeSizes should match canon for chinese 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for cyrillic 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match canon for cyrillicAndLatin 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match canon for devanagariAndGurmukhi 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for ethiopic 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for hindi 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for korean 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for latin 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match canon for latinDiacritics 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for nepali 1`] = `
"
    font-size: 1.75rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for noAscendersOrDescenders 1`] = `
"
    font-size: 1.75rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.75rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for sinhalese 1`] = `
"
    font-size: 1.5625rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.9375rem;
      line-height: 2.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.625rem;
      line-height: 3.625rem;
    }
  "
`;

exports[`getTypeSizes should match canon for tamil 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.125rem;
      line-height: 2.875rem;
    }
  "
`;

exports[`getTypeSizes should match canon for thai 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.5rem;
      line-height: 3.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for bengali 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.4375rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.625rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for chinese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for cyrillic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for cyrillicAndLatin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for devanagariAndGurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for ethiopic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for hindi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for korean 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for latin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for latinDiacritics 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for nepali 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for noAscendersOrDescenders 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.3125rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2.125rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for tamil 1`] = `
"
    font-size: 0.875rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match doublePica for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for arabic 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for bengali 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for burmese 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for chinese 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for cyrillic 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for cyrillicAndLatin 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for devanagariAndGurmukhi 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for ethiopic 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for hindi 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for korean 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for latin 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for latinDiacritics 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for nepali 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for noAscendersOrDescenders 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for sinhalese 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for tamil 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match elephant for thai 1`] = `
"
    font-size: 3.75rem;
    line-height: 4rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4.875rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 7.25rem;
      line-height: 7.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for arabic 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for bengali 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.1875rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for burmese 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 4.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5.375rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for chinese 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for cyrillic 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for cyrillicAndLatin 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for devanagariAndGurmukhi 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for ethiopic 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for hindi 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for korean 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for latin 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for latinDiacritics 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 4.25rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for nepali 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for noAscendersOrDescenders 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for sinhalese 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.8125rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for tamil 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.875rem;
      line-height: 2.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.875rem;
      line-height: 4.25rem;
    }
  "
`;

exports[`getTypeSizes should match foolscap for thai 1`] = `
"
    font-size: 2rem;
    line-height: 2.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.25rem;
      line-height: 3.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.125rem;
      line-height: 4.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for arabic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for bengali 1`] = `
"
    font-size: 1.1875rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.25rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.3125rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for burmese 1`] = `
"
    font-size: 1rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for chinese 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for cyrillic 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for cyrillicAndLatin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for devanagariAndGurmukhi 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for ethiopic 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for hindi 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for korean 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for latin 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for latinDiacritics 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for nepali 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for noAscendersOrDescenders 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for sinhalese 1`] = `
"
    font-size: 1.125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.1875rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.1875rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for tamil 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match greatPrimer for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.25rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for arabic 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for bengali 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.625rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 5.375rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for burmese 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 6.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 9rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for chinese 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for cyrillic 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for cyrillicAndLatin 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for devanagariAndGurmukhi 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for ethiopic 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for hindi 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for korean 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for latin 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for latinDiacritics 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 7.25rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for nepali 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for noAscendersOrDescenders 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 4rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 6rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for sinhalese 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.3125rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.8125rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for tamil 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match imperial for thai 1`] = `
"
    font-size: 3.125rem;
    line-height: 3.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 6.5rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for bengali 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.8125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.5625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.5625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for chinese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for cyrillicAndLatin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for devanagariAndGurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.3125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for ethiopic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for hindi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.3125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for korean 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for latinDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for nepali 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.3125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.625rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for noAscendersOrDescenders 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for sinhalese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for tamil 1`] = `
"
    font-size: 0.6875rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.6875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match longPrimer for thai 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.9375rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match minion for arabic 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.125rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for bengali 1`] = `
"
    font-size: 0.625rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for burmese 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for chinese 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for cyrillic 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for cyrillicAndLatin 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for devanagariAndGurmukhi 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for ethiopic 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for hindi 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for korean 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for latin 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for latinDiacritics 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for nepali 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.125rem;
    }
  "
`;

exports[`getTypeSizes should match minion for noAscendersOrDescenders 1`] = `
"
    font-size: 0.875rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match minion for sinhalese 1`] = `
"
    font-size: 0.8125rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.8125rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.8125rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match minion for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.625rem;
      line-height: 0.875rem;
    }
  "
`;

exports[`getTypeSizes should match minion for thai 1`] = `
"
    font-size: 0.75rem;
    line-height: 1rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.75rem;
      line-height: 1rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for bengali 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.5rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for chinese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for cyrillic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for cyrillicAndLatin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for devanagariAndGurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for ethiopic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for hindi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for korean 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for latin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for latinDiacritics 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for nepali 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for noAscendersOrDescenders 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for sinhalese 1`] = `
"
    font-size: 1.1875rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.4375rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for tamil 1`] = `
"
    font-size: 1rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.125rem;
      line-height: 1.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match paragon for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for arabic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for bengali 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.4375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.9375rem;
      line-height: 1.4375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for burmese 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.5625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.875rem;
    }
  "
`;

exports[`getTypeSizes should match pica for chinese 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match pica for cyrillic 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for cyrillicAndLatin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for devanagariAndGurmukhi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for ethiopic 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match pica for hindi 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for korean 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match pica for latin 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for latinDiacritics 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.25rem;
    }
  "
`;

exports[`getTypeSizes should match pica for nepali 1`] = `
"
    font-size: 0.9375rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for noAscendersOrDescenders 1`] = `
"
    font-size: 1rem;
    line-height: 1.375rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.75rem;
    }
  "
`;

exports[`getTypeSizes should match pica for sinhalese 1`] = `
"
    font-size: 1.0625rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.0625rem;
      line-height: 1.5rem;
    }
  "
`;

exports[`getTypeSizes should match pica for tamil 1`] = `
"
    font-size: 0.75rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 0.875rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match pica for thai 1`] = `
"
    font-size: 1rem;
    line-height: 1.25rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1rem;
      line-height: 1.375rem;
    }
  "
`;

exports[`getTypeSizes should match royal for arabic 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for bengali 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.9375rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.25rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for burmese 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 5.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 7.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for chinese 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for cyrillic 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for cyrillicAndLatin 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for devanagariAndGurmukhi 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for ethiopic 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for hindi 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for korean 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for latin 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for latinDiacritics 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 4rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.75rem;
    }
  "
`;

exports[`getTypeSizes should match royal for nepali 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for noAscendersOrDescenders 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 3.25rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 4.75rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for sinhalese 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.625rem;
      line-height: 3.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.8125rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match royal for tamil 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5rem;
    }
  "
`;

exports[`getTypeSizes should match royal for thai 1`] = `
"
    font-size: 2.5rem;
    line-height: 2.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 2.5rem;
      line-height: 3.625rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 3.5rem;
      line-height: 5.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for arabic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.125rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for bengali 1`] = `
"
    font-size: 1.5625rem;
    line-height: 2rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.8125rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.0625rem;
      line-height: 3rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for burmese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2.375rem;
      line-height: 3.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for chinese 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for cyrillic 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for cyrillicAndLatin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for devanagariAndGurmukhi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for ethiopic 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for hindi 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for korean 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for latin 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.75rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.25rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for latinDiacritics 1`] = `
"
    font-size: 1.375rem;
    line-height: 1.75rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for nepali 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for noAscendersOrDescenders 1`] = `
"
    font-size: 1.5rem;
    line-height: 1.875rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.625rem;
      line-height: 2rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.625rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for sinhalese 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.6875rem;
      line-height: 2.25rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 2rem;
      line-height: 2.75rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for tamil 1`] = `
"
    font-size: 1rem;
    line-height: 1.5rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.375rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.75rem;
      line-height: 2.375rem;
    }
  "
`;

exports[`getTypeSizes should match trafalgar for thai 1`] = `
"
    font-size: 1.25rem;
    line-height: 1.625rem;

    @media (min-width: 20rem) and (max-width: 37.4375rem) {
      font-size: 1.5rem;
      line-height: 1.875rem;
    }

    @media (min-width: 37.5rem) {
      font-size: 1.875rem;
      line-height: 2.625rem;
    }
  "
`;
